--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: "Medium";
+  src: local("Bogart-Alt-Medium"),
+    url("./fonts/Bogart-Alt-Medium.ttf") format("truetype");
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@font-face {
+  font-family: "Regular";
+  src: local("Biotif-Regular.ttf"),
+    url("./fonts/Biotif-Regular.ttf") format("truetype");
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+@font-face {
+  font-family: "Bold";
+  src: local("Biotif-Bold.ttf"),
+    url("./fonts/Biotif-Bold.ttf") format("truetype");
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@font-face {
+  font-family: "Hnmedium";
+  src: local("Helvetica Neue Medium Extended.ttf"),
+    url("./fonts/Helvetica Neue Medium Extended.ttf") format("truetype");
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@font-face {
+  font-family: "Hnlight";
+  src: local("Helvetica Neue UltraLight.ttf"),
+    url("./fonts/Helvetica Neue UltraLight.ttf") format("truetype");
 }
